Finally fixed alignment issue with print btn in letter builder

--- a/style.css
+++ b/style.css
@@ -343,7 +343,6 @@ small img.inline {
 .popup button {
 
     width: 90px;
-    background-color: #75d8ff;
 }
 
 /*** IDS ***/
